# projeto_final_v2

./: CMakeLists.txt  main.c
Funcoes/: Funcoes Locais-Pdi.c  Funcoes Locais-Pdi.h  Funcoes Registo.c  Funcoes Registo.h
Linked Lists/: Locais Lists.c  Locais Lists.h  PDI Lists.c  PDI Lists.h  Registo Lists.c  Registo Lists.h
