cmake_minimum_required(VERSION 3.14)
project(trabalho_final_v2 C)

set(CMAKE_C_STANDARD 90)

add_executable(trabalho_final_v2 main.c "Funcoes/Funcoes Locais-Pdi.c" "Funcoes/Funcoes Locais-Pdi.h" "Funcoes/Funcoes Registo.c" "Funcoes/Funcoes Registo.h" "Linked Lists/Locais Lists.c" "Linked Lists/Locais Lists.h" "Linked Lists/PDI Lists.c" "Linked Lists/PDI Lists.h" "Linked Lists/Registo Lists.c" "Linked Lists/Registo Lists.h")